--- a/templates/main.html
+++ b/templates/main.html
@@ -10,7 +10,7 @@
  	-->
 	<head>
 
-		<!--Meta Content-->
+	<!--Meta Content-->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, maximum-scale=1">
 	<meta name="description" content="Sniffing out fake news on the Internet.">
@@ -58,10 +58,6 @@
 		<!--jQuery-->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
-		<!--Other Scripts-->
-		<script>
-		</script>
-
 	</head>
 
 	<body>
@@ -74,7 +70,7 @@
 			</div>
 			<div class="content">
 				<input id="url" class="url" type="text" name="url" placeholder="http://" placeholder="http://" >
-				<button class="button" onclick="update()">Submit</button>
+				<button id="submit-button" class="button">Submit</button>
 			</div>
 			<div class="return">
 				<p id="answer" class="answer"></p>
@@ -87,27 +83,8 @@
 
 
 		<!--Javascript-->
-		<script src="../static/js/main.js" type="text/javascript"></script>
+		<script src="../static/js/index.js" type="text/javascript"></script>
 		<!--<script src="../static/js/bootstrap.js" type="text/javascript"></script>-->
-
-		<!--Other Scripts-->
-		<script>
-		function update() {
-		  random = Math.floor(Math.random()*3 + 1);
-		  if (random == 3) {
-		    document.getElementById("answer").innerHTML = "Malicious";
-		    document.body.style.backgroundImage = "url('../static/img/malicious.jpg')";
-		  }
-		  if (random == 2) {
-		    document.getElementById("answer").innerHTML = "Questionable";
-				document.body.style.backgroundImage = "url('../static/img/questionable.jpg')"
-		  }
-		  if (random == 1) {
-		    document.getElementById("answer").innerHTML = "Credible";
-				document.body.style.backgroundImage = "url('../static/img/credible.jpg')"
-		  }
-		}
-
-		</script>
+		<img src="../static/img/loading.gif" class="loading">
 	</body>
 </html>
